--- a/index.html
+++ b/index.html
@@ -4,28 +4,24 @@
 <head>
 	<meta charset="utf-8">
 	<title>Dynamic Web Apps Portfolio - CB</title>
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-	
-	<!-- HEADER -->
-	<header class="header-about">
+	<!-- this is the header -->
+	<header class="header">
 		<div class="container">
 			<div class="top-container">
-				<!-- LOGO -->
-				<a href="about.html" class="logo"><img src="images/claudio.jpg" alt="Logo"></a>
-			</div> <!-- end top-container -->
-	
+				<a href="index.html" class="logo"><img src="images/claudio.jpg" alt="picture"></a>
+			</div> 
 			<div class="header-contents">
 				<h2>Claudio Bustamante</h2>
 				<h2>Dynamic Web Apps Portfolio</h2>
-			</div> <!-- end header-contents -->
-		</div> <!-- end container -->
+			</div>
+		</div>
 	</header>
 
-
-	<!-- ABOUT -->
+	<!-- this is the main container -->
 	<div class="container-center">
 		<p>Q1: My name is Claudio Bustamante. I live in Fairfax, VA. I have lived in Chicago, Boston and Fairfax. I was born in Chile and I came to the states to study in 1986. I have attended University of Illinois at Chicago. </p>
 		<p>Q2: I would like to learn as much as I can about Web Apps.</p>
@@ -43,12 +39,6 @@
 			<li><a href='http://p4.claudiovirginia.com'>View Project 4</a></li>		
 			<li><a href='http://github.com/claudiovirginia/p4'>P4 on Github</a></li>
 		</ul>
-		
-	</div> <!-- end container -->
-
-	<div class="copyright">
-		<p>&copy; 2014 Claudio Bustamante.</p>
-	</div> <!-- end copyright -->
-		
+	</div> 
 </body>
 </html>
